<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="key_details">

    <Preference
        android:title="@string/pref_bd_type"
        android:key="bd_type_info"/>
    <Preference
        android:title="@string/pref_bd_uuid"
        android:key="bd_uuid_info"/>
    <Preference
        android:title="@string/pref_bd_bluetooth_name"
        android:key="bd_bluetooth_name_info"/>
    <Preference
        android:title="@string/pref_bd_txpower"
        android:key="bd_txpower_info"/>
    <Preference
        android:title="@string/pref_bd_rssi"
        android:key="bd_rssi_info"/>
    <Preference
        android:title="@string/pref_bd_distance"
        android:key="bd_distance_info"/>
    <Preference
        android:title="@string/pref_bd_major"
        android:key="bd_major_info"/>
    <Preference
        android:title="@string/pref_bd_minor"
        android:key="bd_minor_info"/>
</PreferenceScreen>