<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="key_details">

    <SwitchPreferenceCompat
        android:title="@string/pref_bd_switch_active"
        android:key="bd_switch_active"
        android:summary="@string/pref_bd_summary_switch_active"/>
    <EditTextPreference
        android:title="@string/pref_bd_name"
        android:key="bd_name_info"/>
    <Preference
        android:title="@string/pref_bd_type"
        android:key="bd_type_info"
        android:enabled="false"/>
    <Preference
        android:title="@string/pref_bd_bluetooth_name"
        android:key="bd_bluetooth_name_info"/>
    <Preference
        android:title="@string/pref_bd_uuid"
        android:key="bd_uuid_info"/>
    <Preference
        android:title="@string/pref_bd_major"
        android:key="bd_major_info"/>
    <Preference
        android:title="@string/pref_bd_minor"
        android:key="bd_minor_info"/>
</PreferenceScreen>