<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="key_actions">


    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_ba_action_range_array"
        android:entryValues="@array/pref_ba_action_range_values"
        android:key="ba_action_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_ba_action_selection" />

    <EditTextPreference
        android:dependency="ba_action_list"
        android:title="@string/pref_ba_action_param1"
        android:key="ba_action_param1" />

    <PreferenceCategory
        android:title="@string/pref_ba_action_test_category">
        <Preference
            android:dependency="ba_action_param1"
            android:title="@string/pref_ba_action_test_button"
            android:key="ba_action_test"/>
    </PreferenceCategory>


</PreferenceScreen>