<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan_around"
            android:icon="@drawable/ic_cast_black_24dp"
            android:title="@string/action_scan_around" />
        <item
            android:id="@+id/nav_scan_radar"
            android:icon="@drawable/ic_radar_black_24dp"
            android:title="@string/action_scan_managed" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>
</menu>